V2: SQL queries fix, async, refactor